--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,3 +1,7 @@
+body {
+  font-family: 'Inconsolata', monospace;
+}
+
 .jumbotron {
     margin-bottom: 4em;
     border: 40px;
@@ -19,3 +23,4 @@
   border-radius: 2px;
   cursor: pointer !important;
 }
+
